--- a/Project29-ExplodingMonkeys/Support/Base.lproj/Main.storyboard
+++ b/Project29-ExplodingMonkeys/Support/Base.lproj/Main.storyboard
@@ -16,32 +16,91 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="zpb-BK-gid">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="45" minValue="0.0" maxValue="90" translatesAutoresizingMaskIntoConstraints="NO" id="zpb-BK-gid">
                                 <rect key="frame" x="20" y="20" width="300" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="296" id="1LW-YV-d0t"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="angleChanged:" destination="BV1-FR-VrT" eventType="valueChanged" id="6yK-Xz-Uy4"/>
+                                </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ppT-LV-pea">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="125" minValue="0.0" maxValue="250" translatesAutoresizingMaskIntoConstraints="NO" id="ppT-LV-pea">
                                 <rect key="frame" x="480" y="20" width="300" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="velocityChanged:" destination="BV1-FR-VrT" eventType="valueChanged" id="ULM-Hr-z04"/>
+                                </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMn-XN-lpC">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMn-XN-lpC">
                                 <rect key="frame" x="325" y="24" width="120" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="AZ5-3C-oNh"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDO-5z-r1q">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;&lt;&lt; PLAYER ONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAM-Zw-Aal">
+                                <rect key="frame" x="370" y="64" width="284" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDO-5z-r1q">
                                 <rect key="frame" x="785" y="24" width="120" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="pTh-cJ-OE1"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hW3-Xt-Whu">
+                                <rect key="frame" x="864" y="15" width="120" height="43"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="LAUNCH">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="22"/>
+                                    <color key="baseForegroundColor" systemColor="systemRedColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="launch:" destination="BV1-FR-VrT" eventType="touchUpInside" id="5MB-Yq-leO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kMn-XN-lpC" firstAttribute="firstBaseline" secondItem="dDO-5z-r1q" secondAttribute="firstBaseline" id="0Zc-jM-LKI"/>
+                            <constraint firstItem="zpb-BK-gid" firstAttribute="bottom" secondItem="kMn-XN-lpC" secondAttribute="bottom" id="2ey-eW-DhX"/>
+                            <constraint firstItem="fAM-Zw-Aal" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="9Zv-ud-nq6"/>
+                            <constraint firstItem="kMn-XN-lpC" firstAttribute="leading" secondItem="zpb-BK-gid" secondAttribute="trailing" constant="7" id="DtR-cp-t0l"/>
+                            <constraint firstItem="kMn-XN-lpC" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="4" id="ErH-vk-Bng"/>
+                            <constraint firstItem="zpb-BK-gid" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" id="H4K-A3-Ltq"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="fAM-Zw-Aal" secondAttribute="bottom" constant="669" id="HA2-Ua-h9Z"/>
+                            <constraint firstItem="kMn-XN-lpC" firstAttribute="baseline" secondItem="dDO-5z-r1q" secondAttribute="baseline" id="S6l-bV-KA0"/>
+                            <constraint firstItem="hW3-Xt-Whu" firstAttribute="leading" secondItem="ppT-LV-pea" secondAttribute="trailing" constant="86" id="S84-1C-Dgh"/>
+                            <constraint firstItem="fAM-Zw-Aal" firstAttribute="top" secondItem="kMn-XN-lpC" secondAttribute="bottom" constant="15" id="Ust-C2-SW8"/>
+                            <constraint firstItem="ppT-LV-pea" firstAttribute="bottom" secondItem="dDO-5z-r1q" secondAttribute="bottom" id="X5J-m4-Vvb"/>
+                            <constraint firstItem="zpb-BK-gid" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="22" id="fjz-uG-IDn"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="dDO-5z-r1q" secondAttribute="trailing" constant="119" id="fp4-iA-oLy"/>
+                            <constraint firstItem="dDO-5z-r1q" firstAttribute="leading" secondItem="ppT-LV-pea" secondAttribute="trailing" constant="7" id="gYn-AF-9RL"/>
+                            <constraint firstItem="ppT-LV-pea" firstAttribute="leading" secondItem="kMn-XN-lpC" secondAttribute="trailing" constant="37" id="je0-X7-b6y"/>
+                            <constraint firstItem="dDO-5z-r1q" firstAttribute="centerY" secondItem="hW3-Xt-Whu" secondAttribute="centerY" id="k7M-AF-Ckh"/>
+                            <constraint firstItem="fAM-Zw-Aal" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="370" id="l6U-ac-VVU"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="hW3-Xt-Whu" secondAttribute="bottom" constant="710" id="r1d-f4-bVq"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="hW3-Xt-Whu" secondAttribute="trailing" constant="40" id="tsR-pL-sia"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="zpb-BK-gid" secondAttribute="bottom" constant="719" id="vvX-rQ-Bze"/>
+                            <constraint firstItem="zpb-BK-gid" firstAttribute="top" secondItem="ppT-LV-pea" secondAttribute="top" id="w6A-5i-oFK"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="angleLabel" destination="kMn-XN-lpC" id="BBB-8A-F27"/>
+                        <outlet property="angleSlider" destination="zpb-BK-gid" id="x22-AA-M0f"/>
+                        <outlet property="launchButton" destination="hW3-Xt-Whu" id="81G-na-WdR"/>
+                        <outlet property="playerNumber" destination="fAM-Zw-Aal" id="AtW-aP-eJD"/>
+                        <outlet property="velocityLabel" destination="dDO-5z-r1q" id="A2u-8I-Cjw"/>
+                        <outlet property="velocitySlider" destination="ppT-LV-pea" id="7LT-70-Nic"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
@@ -51,6 +110,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
